--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "pinia": "^2.1.4"
   }
 }
